force-app/main/default/objects/ABSLAMC_Case_Detail__c/ABSLAMC_Case_Detail__c.object-meta.xml
<CustomObject>
    <label>ABSLAMC Case Detail</label>
    <nameField>
        <displayFormat>AMC-{0000000}</displayFormat>
        <label>ABSLAMC Case Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ABSLAMC Case Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>