force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <label>Account No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>