force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Action__c.field-meta.xml
<CustomField>
    <fullName>Action__c</fullName>
    <label>Action</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Satisfactory</fullName>
            </value>
            <value>
                <fullName>Additional Information Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>