force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Additional_Remarks_for_CAMS__c.field-meta.xml
<CustomField>
    <fullName>Additional_Remarks_for_CAMS__c</fullName>
    <label>Additional Remarks for CAMS</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>