force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Application_Name_Type_By_App_Support__c.field-meta.xml
<CustomField>
    <fullName>Application_Name_Type_By_App_Support__c</fullName>
    <label>Application Name/Type - By App Support</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>ABC Website</fullName>
            </value>
            <value>
                <fullName>Active App</fullName>
            </value>
            <value>
                <fullName>Investor App</fullName>
            </value>
            <value>
                <fullName>IFA App</fullName>
            </value>
            <value>
                <fullName>IFA Portal</fullName>
            </value>
            <value>
                <fullName>Investor Portal</fullName>
            </value>
            <value>
                <fullName>Mutual Fund PreLogin</fullName>
            </value>
            <value>
                <fullName>VYMO</fullName>
            </value>
            <value>
                <fullName>What&apos;sApp Bot</fullName>
            </value>
            <value>
                <fullName>CAMS</fullName>
            </value>
            <value>
                <fullName>Easy Link</fullName>
            </value>
            <value>
                <fullName>Smart Link</fullName>
            </value>
            <value>
                <fullName>Salary SIP</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Partner Easy link</fullName>
            </value>
            <value>
                <fullName>Corporate Investor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>