force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Basket_Name__c.field-meta.xml
<CustomField>
    <fullName>Basket_Name__c</fullName>
    <label>Basket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>