force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Benificiary_Name__c.field-meta.xml
<CustomField>
    <fullName>Benificiary_Name__c</fullName>
    <label>Benificiary Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>