force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Error_Message__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Error_Message__c</fullName>
    <label>CAMS Error Message</label>
    <type>TextArea</type>
</CustomField>