force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Remarks__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Remarks__c</fullName>
    <label>CAMS Remarks</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>