force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_SEBI_Reportable_Category__c.field-meta.xml
<CustomField>
    <fullName>CAMS_SEBI_Reportable_Category__c</fullName>
    <label>CAMS SEBI Reportable Category</label>
    <type>TextArea</type>
</CustomField>