force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_SEBI_Reportable_Flag__c.field-meta.xml
<CustomField>
    <fullName>CAMS_SEBI_Reportable_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CAMS SEBI Reportable Flag</label>
    <type>Checkbox</type>
</CustomField>