force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Ticket_Category__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Ticket_Category__c</fullName>
    <label>CAMS Ticket Category</label>
    <length>5</length>
    <type>Text</type>
</CustomField>