force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Ticket_Closure_date__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Ticket_Closure_date__c</fullName>
    <label>CAMS Ticket Closure date</label>
    <type>DateTime</type>
</CustomField>