force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Ticket_Creation_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Ticket_Creation_Date_Time__c</fullName>
    <label>CAMS Ticket Creation Date Time</label>
    <type>DateTime</type>
</CustomField>