force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Ticket_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Ticket_Reference_Number__c</fullName>
    <label>CAMS Ticket Reference Number</label>
    <length>30</length>
    <type>Text</type>
</CustomField>