force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/CAMS_Ticket_Status__c.field-meta.xml
<CustomField>
    <fullName>CAMS_Ticket_Status__c</fullName>
    <label>CAMS Ticket Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>