force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Check_List__c.field-meta.xml
<CustomField>
    <fullName>Check_List__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Check List</label>
    <type>Checkbox</type>
</CustomField>