force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Closure_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Closure_Remarks__c</fullName>
    <label>Closure Remarks</label>
    <type>TextArea</type>
</CustomField>