force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Connection_Status__c.field-meta.xml
<CustomField>
    <fullName>Connection_Status__c</fullName>
    <label>Connection Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>