force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Current_Value__c.field-meta.xml
<CustomField>
    <fullName>Current_Value__c</fullName>
    <label>Current Value</label>
    <type>TextArea</type>
</CustomField>