force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Date_of_CAMS_Response__c.field-meta.xml
<CustomField>
    <fullName>Date_of_CAMS_Response__c</fullName>
    <label>Date of CAMS Response</label>
    <type>DateTime</type>
</CustomField>