force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Date_of_Reply_back_to_App_Support__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Reply_back_to_App_Support__c</fullName>
    <label>Date of Reply back to App Support</label>
    <type>DateTime</type>
</CustomField>