force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Description_if_Others__c.field-meta.xml
<CustomField>
    <fullName>Description_if_Others__c</fullName>
    <label>Description (if Others)</label>
    <type>TextArea</type>
</CustomField>