force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Dialer_Call_Track_ID__c.field-meta.xml
<CustomField>
    <fullName>Dialer_Call_Track_ID__c</fullName>
    <label>Ubona Call ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>