force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/DP_ID__c.field-meta.xml
<CustomField>
    <fullName>DP_ID__c</fullName>
    <label>DP ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>