force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Drawn_on_Bank__c.field-meta.xml
<CustomField>
    <fullName>Drawn_on_Bank__c</fullName>
    <label>Drawn on Bank</label>
    <length>100</length>
    <type>Text</type>
</CustomField>