force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/DTSM_No__c.field-meta.xml
<CustomField>
    <fullName>DTSM_No__c</fullName>
    <label>DTSM No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>