force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Enter_Amount__c.field-meta.xml
<CustomField>
    <fullName>Enter_Amount__c</fullName>
    <label>Enter Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>