force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Enter_Amount_if_Partial__c.field-meta.xml
<CustomField>
    <fullName>Enter_Amount_if_Partial__c</fullName>
    <label>Enter Amount if Partial</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>