force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Franked__c.field-meta.xml
<CustomField>
    <fullName>Franked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Franked</label>
    <type>Checkbox</type>
</CustomField>