force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/IFSC_RTGS_NEFT_Code__c.field-meta.xml
<CustomField>
    <fullName>IFSC_RTGS_NEFT_Code__c</fullName>
    <label>IFSC/RTGS/NEFT Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>