force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Interim_Response__c.field-meta.xml
<CustomField>
    <fullName>Interim_Response__c</fullName>
    <label>Interim Response</label>
    <type>TextArea</type>
</CustomField>