force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Mode_of_Remittance__c.field-meta.xml
<CustomField>
    <fullName>Mode_of_Remittance__c</fullName>
    <label>Mode of Remittance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
            <value>
                <fullName>Cheque</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>