force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Name_of_First_Applicant__c.field-meta.xml
<CustomField>
    <fullName>Name_of_First_Applicant__c</fullName>
    <label>Name of First Applicant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>