force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Nature_Of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Nature_Of_Issue__c</fullName>
    <label>Nature Of Issue</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account statement</fullName>
            </value>
            <value>
                <fullName>Login Issue</fullName>
            </value>
            <value>
                <fullName>OTP not received</fullName>
            </value>
            <value>
                <fullName>KYC issue</fullName>
            </value>
            <value>
                <fullName>Payment Concern</fullName>
            </value>
            <value>
                <fullName>Lumpsum</fullName>
            </value>
            <value>
                <fullName>SIP</fullName>
            </value>
            <value>
                <fullName>Redemption / Instant Redemption</fullName>
            </value>
            <value>
                <fullName>STP</fullName>
            </value>
            <value>
                <fullName>SWP</fullName>
            </value>
            <value>
                <fullName>Switch</fullName>
            </value>
            <value>
                <fullName>NFO</fullName>
            </value>
            <value>
                <fullName>Bank Details / OTM</fullName>
            </value>
            <value>
                <fullName>Data Related</fullName>
            </value>
            <value>
                <fullName>TPIN</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>App Not Working</fullName>
            </value>
            <value>
                <fullName>System slowness</fullName>
            </value>
            <value>
                <fullName>Nominee Related</fullName>
            </value>
            <value>
                <fullName>Service Issues</fullName>
            </value>
            <value>
                <fullName>System Down</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>