force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Next_Call_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Call_Date__c</fullName>
    <label>Next Call Date</label>
    <type>Date</type>
</CustomField>