force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/NFT_Category__c.field-meta.xml
<CustomField>
    <fullName>NFT_Category__c</fullName>
    <label>NFT Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Change of Email ID</fullName>
            </value>
            <value>
                <fullName>Change of Mobile Number</fullName>
            </value>
            <value>
                <fullName>Change of Bank</fullName>
            </value>
            <value>
                <fullName>Change of Address</fullName>
            </value>
            <value>
                <fullName>Change of Broker</fullName>
            </value>
            <value>
                <fullName>Change of Nominee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>