force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/No_of_iterations__c.field-meta.xml
<CustomField>
    <fullName>No_of_iterations__c</fullName>
    <label>No. of iterations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>