force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Note_For_CAMS__c.field-meta.xml
<CustomField>
    <fullName>Note_For_CAMS__c</fullName>
    <label>Notes For CAMS</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>