force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Payout_Mode__c.field-meta.xml
<CustomField>
    <fullName>Payout_Mode__c</fullName>
    <label>Payout Mode</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Stock Transfer</fullName>
            </value>
            <value>
                <fullName>Fund Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>