force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Pending_at_Level__c.field-meta.xml
<CustomField>
    <fullName>Pending_at_Level__c</fullName>
    <label>Pending at Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>L1</fullName>
            </value>
            <value>
                <fullName>L2</fullName>
            </value>
            <value>
                <fullName>L3</fullName>
            </value>
            <value>
                <fullName>Call Centre</fullName>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>PPD</fullName>
            </value>
            <value>
                <fullName>Unit Admin Operations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>