force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Pending_With__c.field-meta.xml
<CustomField>
    <fullName>Pending_With__c</fullName>
    <label>Pending With</label>
    <type>TextArea</type>
</CustomField>