force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/PHD_Complaint_Source__c.field-meta.xml
<CustomField>
    <fullName>PHD_Complaint_Source__c</fullName>
    <label>PHD Complaint Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advocate Notice - 16 Days</fullName>
            </value>
            <value>
                <fullName>AMFI - 04 Day</fullName>
            </value>
            <value>
                <fullName>CBI - 03 Days</fullName>
            </value>
            <value>
                <fullName>CEO - 01 Day</fullName>
            </value>
            <value>
                <fullName>Clarification to SEBI – 01 Day</fullName>
            </value>
            <value>
                <fullName>COO - 01 Day</fullName>
            </value>
            <value>
                <fullName>Court Orders/Court Summon  – 10 Days</fullName>
            </value>
            <value>
                <fullName>Fraud/Forgery - 10 Days</fullName>
            </value>
            <value>
                <fullName>Head - Customer Service - 01 Day</fullName>
            </value>
            <value>
                <fullName>Income Tax _10 Days</fullName>
            </value>
            <value>
                <fullName>Misselling-10 Days</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>Off Shore – NRI – 01 Days</fullName>
            </value>
            <value>
                <fullName>Police Case – 10 Days</fullName>
            </value>
            <value>
                <fullName>SEBI - 04 Day</fullName>
            </value>
            <value>
                <fullName>Senior Citizen – 01 Days</fullName>
            </value>
            <value>
                <fullName>Social Media – 01 Days</fullName>
            </value>
            <value>
                <fullName>ODR _10 Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>