force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Remarks_Notes__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Notes__c</fullName>
    <label>Remarks/Notes</label>
    <type>TextArea</type>
</CustomField>