force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Reply_Type_for_CAMS__c.field-meta.xml
<CustomField>
    <fullName>Reply_Type_for_CAMS__c</fullName>
    <label>Reply Type for CAMS</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
                <label>Interim Reply</label>
            </value>
            <value>
                <fullName>MIR1</fullName>
                <label>More Information Required</label>
            </value>
            <value>
                <fullName>MIR2</fullName>
                <label>More Information Required again</label>
            </value>
            <value>
                <fullName>NS</fullName>
                <label>Not Satisfactory Response</label>
            </value>
            <value>
                <fullName>S</fullName>
                <label>Satisfactory Response</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>