force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Residential_Status__c.field-meta.xml
<CustomField>
    <fullName>Residential_Status__c</fullName>
    <label>Residential Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AOP</fullName>
            </value>
            <value>
                <fullName>Body Corporate</fullName>
            </value>
            <value>
                <fullName>HUF</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>LLP</fullName>
            </value>
            <value>
                <fullName>NRI/OCB-NRE</fullName>
            </value>
            <value>
                <fullName>NRI/OCB-NRO</fullName>
            </value>
            <value>
                <fullName>On behalf of minor</fullName>
            </value>
            <value>
                <fullName>Partnership Firm</fullName>
            </value>
            <value>
                <fullName>Society / Club</fullName>
            </value>
            <value>
                <fullName>Trust</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>