force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/RM_Name__c.field-meta.xml
<CustomField>
    <fullName>RM_Name__c</fullName>
    <label>RM Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>