force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Submitted_at_DISPL__c.field-meta.xml
<CustomField>
    <fullName>Submitted_at_DISPL__c</fullName>
    <label>Submitted at DISPL</label>
    <type>Date</type>
</CustomField>