force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Switch_Out_Basket_Name__c.field-meta.xml
<CustomField>
    <fullName>Switch_Out_Basket_Name__c</fullName>
    <label>Switch Out Basket Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>