force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/TAT_Breach_comments__c.field-meta.xml
<CustomField>
    <fullName>TAT_Breach_comments__c</fullName>
    <label>TAT Breach comments</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>