force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Top_Up_Letter_Received__c.field-meta.xml
<CustomField>
    <fullName>Top_Up_Letter_Received__c</fullName>
    <label>Top Up Letter Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>