force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Transaction_Channel_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Channel_Source__c</fullName>
    <label>Transaction Channel Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MFU</fullName>
            </value>
            <value>
                <fullName>Exchange</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>