force-app/main/default/objects/ABSLAMC_Case_Detail__c/fields/Ubona_Additional_Notes__c.field-meta.xml
<CustomField>
    <fullName>Ubona_Additional_Notes__c</fullName>
    <label>Ubona Additional Notes</label>
    <type>TextArea</type>
</CustomField>